Changed LDAPserver to LDAP::Server. Rejigged the repository to match.

20050626

Factored out the SSL stuff into Connection, which should also allow the
STARTTLS extension to be implemented later

Added a Server class, with methods run_tcpserver and run_prefork.

Created an explicit preforkserver method.

20050625

tcpserver: add ability to drop privileges

examples/rbslapd3.rb: make work if ldapdb.yaml does not exist. Also bind
explicitly to 0.0.0.0; it seems that TCPSocket doesn't work properly in
some circumstances without it (FreeBSD 5.4 with IPv6 disabled in kernel)

20050620

RELEASE_0_2

Implemented SSL support in tcpserver, just by copying examples from
openssl module.

Tweak split_dn so that it should work properly with UTF-8 encoded strings

Added examples/rbslapd3.rb, a preforking LDAP server

Added :listen option to tcpserver to set listen queue size. With the default
of 5, and 100 children trying to connect, a few connections get dropped.

Added :nodelay option to tcpserver to set TCP_NODELAY socket option. This
removes 100ms of latency in responses.

Added examples/speedtest.rb

20050619

Modify connection.rb to ensure no memory leak in the event of exceptions
being raised in operation threads.

Fix examples/rbslapd2.rb SQLPool so that it always puts connections back
into the pool (using 'ensure' this time :-)

20050618

RELEASE_0_1

20050616